# fittrackee-cli-rs

./: Cargo.toml  map.json  test_cred.json
src/: main.rs
