[package]
name = "fittrackee-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.7"
fitparser = "0.5.1"
phf = { version = "0.11.1", features = ["macros"] }
reqwest = { version = "0.11.17", features =["json", "multipart", "stream"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.5.0"
tokio = { version = "1.28.1", features = ["full"] }
tokio-util = "0.7.8"

